add Win32PlatformServiceExtensionInterface detachWindow add RenderSystemInterface destroyRenderWindow